--- a/src/assets/styles/Department.css
+++ b/src/assets/styles/Department.css
@@ -210,10 +210,12 @@
     font-size: 1rem;
     color: var(--primary-font-color);
     position: absolute;
+    
 }
 
 .dept-name .member-options .option {
     padding: 5px;
+    font-weight: 300;
 }
 
 .profile-title .dept-head-container {
@@ -485,6 +487,7 @@
     box-sizing: border-box;
     gap: 10px;
     transition: all 200ms;
+    font-weight: 300;
 }
 
 .member-options .option:hover {
