--- a/src/assets/styles/Main.css
+++ b/src/assets/styles/Main.css
@@ -97,14 +97,11 @@
 
 }
 
-.header-container .profile-containers .profile-image-container:hover {
-    border-style: solid;
-    border-width: 5px;
-    scale: 1;
-}
 
 .header-container .profile-containers img {
-    
+    width: 100%;
+    height: 100%;
+    scale: 1.3;
     aspect-ratio: 1 / 1;
 }
 
@@ -195,4 +192,21 @@
 
 .header-options .header-option:hover {
     background-color: aliceblue;
+}
+
+.empty-symbols {
+    padding: 100px;
+    text-align: center;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 400px;
+    font-size: 2vw;
+    gap: 20px;
+    color: rgb(170, 170, 170);
+}
+.empty-symbols .material-symbols-outlined {
+    font-size: 6vw;
 }
