--- a/src/assets/styles/dashboard.css
+++ b/src/assets/styles/dashboard.css
@@ -81,7 +81,7 @@
 
 .system-overview {
     display: grid;
-    grid-template-rows: 1.2fr 6fr;
+    grid-template-rows: 1fr;
     background-color: white;
     border-radius: 10px;
     padding: 2%;
@@ -95,11 +95,13 @@
     padding: 10px;
     box-sizing: border-box;
     gap: 10px;
+    background-color: white;
+    border-radius: 10px;
 }
 
 .shortcuts .manage {
     border-radius: 10px;
-    padding: 10px;
+    padding: 20px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -117,8 +119,17 @@
 
 .graph-container {
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 1fr 1fr;
     gap: 20px;
+}
+
+
+.graph {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 500px;
 }
 
 .logs-container {
