--- a/src/assets/styles/CategoryAndTask.css
+++ b/src/assets/styles/CategoryAndTask.css
@@ -143,6 +143,8 @@
 }
 
 .tasks-average-rating {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     background-color: white;
     width: 100%;
     padding: 20px;
@@ -150,11 +152,15 @@
     border-radius: 10px;
 }
 
-.tasks-average-rating .graph-title {
-    font-weight: 600;
-    font-size: 1.5rem;
+.tasks-average-rating .category-title {
+    grid-column: span 2;
 }
-
+.summary-performance {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    place-items: center;
+    scale: 0.9;
+}
 .all-tasks-container {
     display: flex;
     flex-direction: column;
@@ -457,6 +463,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.task-stats .graph-container .graph {
+    height: 200px;
 }
 
 .edit-toggle {
