optimized the process by separating reviewing and form approval from department page

--- a/src/assets/styles/Department.css
+++ b/src/assets/styles/Department.css
@@ -877,6 +877,8 @@
     box-sizing: border-box;
     border-radius: 10px;
     color: var(--primary-font-color);
+    height: 100%;
+    overflow: scroll;
 }
 
 #create-opcr {
