--- a/src/assets/styles/Main.css
+++ b/src/assets/styles/Main.css
@@ -284,3 +284,59 @@
     background-color: rgb(243, 246, 248);
     font-weight: 300;
 }
+
+
+.dept-ipcr {
+    width: 100% ; 
+    scale: 1;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    box-shadow: 0px 2px rgb(229, 230, 243);
+    background-color: aliceblue;
+    border-color: rgb(218, 218, 218);
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 10px;
+    padding: 10px;
+    gap: 5px;
+    
+    align-items: center;
+}
+
+.dept-ipcr .description {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 20px;
+    
+}
+
+
+.dept-ipcr .description .ipcr-info {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    align-items: center;
+    
+    
+}
+
+.dept-ipcr .description .ipcr-info .ipcr-details{
+    display: flex;
+    flex-direction: row;
+}
+
+.dept-ipcr .status-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+.dept-ipcr .status-container .choices {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+    justify-content: space-between;
+
+}
