--- a/src/assets/styles/CategoryAndTask.css
+++ b/src/assets/styles/CategoryAndTask.css
@@ -190,8 +190,8 @@
 }
 
 .all-tasks-container .all-tasks {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    display: flex;
+    flex-direction: column;
     gap: 10px;
 }
 
@@ -315,18 +315,19 @@
     box-sizing: border-box;
     height: 100%;
     overflow: scroll;
+    gap: 20px;
 }
 
 .main-task-info {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
+    flex-direction: column;
     gap: 10px;
 }
 
 .task-description {
     display: flex;
     flex-direction: column;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     border-radius: 10px;
     padding: 20px;
     box-sizing: border-box;
@@ -340,6 +341,8 @@
 }
 
 .description-container .task-title{
+    display: flex;
+    flex-direction: column;
     font-size: 2rem;
     font-weight: 700;
     transition: all 200ms;
@@ -356,14 +359,24 @@
 .description-container span[contenteditable="true"], 
 .description-container div[contenteditable="true"],
 .task-measurements div[contenteditable="true"]{
-    border-style: solid;
+    border-bottom-style: solid;
     padding: 10px;
+    border-width: 2px;
+    border-radius: 0px;
 }
 
 .description-container .description {
     display: flex;
     flex-direction: column;
 
+}
+
+.descriptions {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 10px;
+    box-sizing: border-box;
+    
 }
 
 .description-container .description .title,
@@ -373,7 +386,7 @@
     font-size: 1.3rem;
     display: flex;
     flex-direction: row;
-    gap: 10px;
+    gap: 20px;
 }
 
 .description-container .description .content {
