--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -40,3 +40,6 @@
 .table-responsive {
   overflow: visible !important;
 }
+
+.modal-backdrop { z-index: 1050 !important; }
+.modal { z-index: 1060 !important; }
