--- a/src/assets/styles/CategoryAndTask.css
+++ b/src/assets/styles/CategoryAndTask.css
@@ -516,3 +516,22 @@
 .category-title .material-symbols-outlined {
     font-size: 2rem;
 }
+
+.empty-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+    position: absolute;
+    background-color: rgb(255, 255, 255, 0.8);
+    z-index: 1000;
+}
+
+.empty-indicator {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
